--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,7 +28,7 @@ p {
 aside {
     width: 20em;
     margin: 1em;
-    border: 1px solid rgba(red, green, blue, alpha);
+    border: 1px solid rgba(0, green, blue, alpha);
     padding: 1em;
     background-color: #eee;
     color: #333;
