--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -6,10 +6,12 @@ body {
     padding: 20px;
 }
 
+h1 {
+    font-family: "Permanent Marker", cursive;
+}
+
 h2 {
     font-family: "Permanent Marker", cursive;
-    font-weight: 400;
-    font-style: normal;
 }
 
 :var {
