--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -16,6 +16,6 @@ h2 {
     --accent1_color: #c37c50;
     --accent2-color: #6ca38e;
 
-    --heading-font:'bree', serif;
-    --paragraph-font: 'libre caslon', serif;
+    --heading-font:'Permanent Marker', cursive;
+    --paragraph-font: 'Barlow', serif;
 }
