--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Permanent+Marker&display=swap');
 
+[data-tts-block-id].tts-active {
+    background: rgb(206, 225, 255, 0.9) !important;
+}
+
+[data-tts-sentence-id].tts-active {
+    background: rgb(0, 89, 191, 0.7) !important;
+}
+
 body {
     font-family: "Barlow", sans-serif;
     max-width: 960px;
