--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,13 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Permanent+Marker&display=swap');
 
-[data-tts-block-id].tts-active {
-    background: rgb(206, 225, 255, 0.9) !important;
-}
-
-[data-tts-sentence-id].tts-active {
-    background: rgb(0, 89, 191, 0.7) !important;
-}
-
 body {
     font-family: "Barlow", sans-serif;
     max-width: 960px;
@@ -18,7 +10,7 @@ h2 {
     font-family: "Permanent Marker", cursive;
 }
 
-:var {
+:root {
     --primary-color: #dadccc;
     --secondary-color: #385c5d;
     --accent1_color: #c37c50;
@@ -26,4 +18,46 @@ h2 {
 
     --heading-font:'Permanent Marker', cursive;
     --paragraph-font: 'Barlow', serif;
+
+    --nav-background-color: #dadccc
+    --nav-link-color: #6ca38e
+    --nav-hover-link-color: #c37c50
+    --nav-hover-background-color: #6ca38e
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--heading-font);
+    color: #385c5d;
+}
+
+
+header {
+    padding: 20px;
+    background-color: #dadccc;
+}
+
+p   {
+    padding: 25px;
+}
+
+nav {
+    background-color: #dadccc;
+    font-size: 1.2rem;
+    display: flex;
+}
+
+nav a {
+    display: block;
+    color: #6ca38e;
+    text-decoration: none;
+    padding: 1rem;
+}
+
+nav a:link, nav a:visited {
+    color: #6ca38e;
+}
+
+nav a:hover {
+    color: #c37c50;
+    background-color: #6ca38e;
 }
