--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -25,6 +25,21 @@ h2 {
     --nav-hover-background-color: #6ca38e
 }
 
+:root {
+    --primary-color: #dadccc;
+    --secondary-color: #385c5d;
+    --accent1_color: #c37c50;
+    --accent2-color: #6ca38e;
+
+    --heading-font:'Permanent Marker', cursive;
+    --paragraph-font: 'Barlow', serif;
+
+    --nav-background-color: #dadccc
+    --nav-link-color: #6ca38e
+    --nav-hover-link-color: #c37c50
+    --nav-hover-background-color: #6ca38e
+}
+
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--heading-font);
     color: #385c5d;
