--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
     --primary-color: #dadccc;
@@ -7,7 +7,7 @@
     --accent2-color: #6ca38e;
 
     --heading-font:'Permanent Marker', cursive;
-    --paragraph-font: 'Barlow', serif;
+    --paragraph-font: "Roboto", sans-serif;
 
     --nav-background-color: #dadccc
     --nav-link-color: #6ca38e
@@ -16,7 +16,7 @@
 }
 
 body {
-    font-family: 'Barlow', serif;
+    font-family: "Roboto", sans-serif;
     max-width: 960px;
     padding: 20px;
 }
