--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -12,7 +12,7 @@
     --nav-background-color: #dadccc
     --nav-link-color: #6ca38e
     --nav-hover-link-color: #c37c50
-    --nav-hover-background-color: #6ca38e
+    --nav-hover-background-color: #385c5d
 }
 
 body {
