--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -15,6 +15,14 @@
     --nav-hover-background-color: #385c5d
 }
 
+[data-tts-block-id].tts-active {
+    background : rgb(206, 225, 255, 0.9) !important;
+}
+
+[data-tts-sentence-id].tts-active {
+    background : rgb(0, 89, 191, 0.7) !important;
+}
+
 body {
     font-family: "Roboto", sans-serif;
     max-width: 960px;
