--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,107 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap') ;
 
-@font-face {
-font-family : 'Permanent Marker';
-font-style : normal;
-font-weight : 400;
-font-display : swap;
-src : url(https://fonts.gstatic.com/s/permanentmarker/v16/Fh4uPib9Iyv2ucM6pGQMWimMp004Hao.ttf) format('truetype');
-}
+:root {
+    --primary-color: #dadccc;
+    --secondary-color: #385c5d;
+    --accent1-color: #c37c50;
+    --accent2-color: #6ca38e;
 
-@font-face {
-font-family : 'Roboto';
-font-style : italic;
-font-weight : 100;
-font-display : swap;
-src : url(https://fonts.gstatic.com/s/roboto/v30/KFOiCnqEu92Fr1Mu51QrIzc.ttf) format('truetype');
-}
+    --heading-font: "Permanent Marker", cursive;
+    --paragraph-font: "Roboto", sans-serif;
 
-@font-face {
-font-family : 'Roboto';
-font-style : italic;
-font-weight : 300;
-font-display : swap;
-src : url(https://fonts.gstatic.com/s/roboto/v30/KFOjCnqEu92Fr1Mu51TjARc9.ttf) format('truetype');
-}
-
-@font-face {
-font-family : 'Roboto';
-font-style : italic;
-font-weight : 400;
-font-display : swap;
-src : url(https://fonts.gstatic.com/s/roboto/v30/KFOkCnqEu92Fr1Mu52xP.ttf) format('truetype');
-}
-
-@font-face {
-font-family : 'Roboto';
-font-style : italic;
-font-weight : 500;
-font-display : swap;
-src : url(https://fonts.gstatic.com/s/roboto/v30/KFOjCnqEu92Fr1Mu51S7ABc9.ttf) format('truetype');
-}
-
-@font-face {
-font-family : 'Roboto';
-font-style : italic;
-font-weight : 700;
-font-display : swap;
-src : url(https://fonts.gstatic.com/s/roboto/v30/KFOjCnqEu92Fr1Mu51TzBhc9.ttf) format('truetype');
-}
-
-@font-face {
-font-family : 'Roboto';
-font-style : italic;
-font-weight : 900;
-font-display : swap;
-src : url(https://fonts.gstatic.com/s/roboto/v30/KFOjCnqEu92Fr1Mu51TLBBc9.ttf) format('truetype');
-}
-
-@font-face {
-font-family : 'Roboto';
-font-style : normal;
-font-weight : 100;
-font-display : swap;
-src : url(https://fonts.gstatic.com/s/roboto/v30/KFOkCnqEu92Fr1MmgWxP.ttf) format('truetype');
-}
-
-@font-face {
-font-family : 'Roboto';
-font-style : normal;
-font-weight : 300;
-font-display : swap;
-src : url(https://fonts.gstatic.com/s/roboto/v30/KFOlCnqEu92Fr1MmSU5vAw.ttf) format('truetype');
-}
-
-@font-face {
-font-family : 'Roboto';
-font-style : normal;
-font-weight : 400;
-font-display : swap;
-src : url(https://fonts.gstatic.com/s/roboto/v30/KFOmCnqEu92Fr1Me5Q.ttf) format('truetype');
-}
-
-@font-face {
-font-family : 'Roboto';
-font-style : normal;
-font-weight : 500;
-font-display : swap;
-src : url(https://fonts.gstatic.com/s/roboto/v30/KFOlCnqEu92Fr1MmEU9vAw.ttf) format('truetype');
-}
-
-@font-face {
-font-family : 'Roboto';
-font-style : normal;
-font-weight : 700;
-font-display : swap;
-src : url(https://fonts.gstatic.com/s/roboto/v30/KFOlCnqEu92Fr1MmWUlvAw.ttf) format('truetype');
-}
-
-@font-face {
-font-family : 'Roboto';
-font-style : normal;
-font-weight : 900;
-font-display : swap;
-src : url(https://fonts.gstatic.com/s/roboto/v30/KFOlCnqEu92Fr1MmYUtvAw.ttf) format('truetype');
+    --nav-background-color: #dadccc;
+    --nav-link-color: #6ca38e;
+    --nav-hover-link-color: #c37c50;
+    --nav-hover-bacground-color: #385c5d;
 }
 
 [data-tts-block-id].tts-active {
