--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -119,4 +119,108 @@ nav a:hover {
 }
 
 /* CSS for About Us */
+.about-h1 {
+    position: absolute;
+    top: 25px;
+    text-align: center;
+    display: grid;
+    color: #fff;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    width: 1280px;
+}
+
+.hero article {
+    background-color: rgba(255, 255, 255, .35);
+    grid-column: 2/12;
+    grid-row: 2;
+}
+
+.hero article img {
+    float: right;
+    margin: 2rem;
+    width: 15rem;
+}
+
+.hero article p {
+    color: ;
+    font-size: 20px;
+    text-align: center;
+    letter-spacing: 2px;
+}
+
+.history {
+    grid-column: 2/12;
+    grid-row: 2;
+    gap: 0 3em;
+    margin: 50px 0;
+    align-items: center;
+    text-align: justify;
+}
+
+.history-img {
+    grid-column: 5/8;
+    grid-row: 2;
+}
+
+.history p:first-of-type {
+    grid-column: 1/5;
+    grid-row: 2;
+    padding: 0 20px;
+}
+
+.history p:last-of-type {
+    grid-column: 8/12;
+    grid-row: 2;
+    padding: 0 20px;
+}
+
+.adventures {
+    grid-column: 1/13;
+    gap: 1em;
+    margin: 50px 0;
+    justify-items: center;
+}
+
+.history h2, adventures h2 {
+    grid-column: 1/1-1;
+    justify-self: center;
+    padding: 1em 0;
+}
+
+.about-img:nth-of-type(1) {
+    grid-column: 2/4;
+}
+
+.about-img:nth-of-type(2) {
+    grid-column: 4/6;
+}
+
+.about-img:nth-of-type(3) {
+    grid-column: 6/8;
+}
+
+.about-img:nth-of-type(4) {
+    grid-column: 8/10;
+}
+
+.about-img:nth-of-type(5) {
+    grid-column: 10/12;
+}
+
+.about:nth-of-type(odd) {
+    background-color: var(--accent1-color)
+    color: var(--nav-hover-link-color);
+    align-self: center;
+}
+
+.about:nth-of-type(even) {
+    background-color: var(--accent2-color);
+    color: var(--nav-hover-link-color);
+    align-self: center;
+}
+
+.figcaption {
+    text-align: center;
+    padding: .5em 0 1em 0;
+}
 
