--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -76,18 +76,18 @@ nav a {
     padding: 1em;
     margin: 0;
     font-family: var(--heading-font);
-    color: ;
+    color: var(--accent2-color);
     font-weight: 700;
     letter-spacing: 1px;
 }
 
 nav a:hover {
     background-color: ;
-    color: ;
+    color: var(--accent1-color);
 }
 
 .cta {
-    background-color: ;
+    background-color: var(--primary-color);
     color: ;
     border: 1px solid #333;
     box-shadow: 10px 10px 5px #333;
