--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -180,7 +180,7 @@ nav a:hover {
 }
 
 .history h2, adventures h2 {
-    grid-column: 1/1 -1;
+    grid-column: 1/1;
     justify-self: center;
     padding: 1em 0;
 }
