--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,10 @@
 
 nav {
     background-color: steelblue;
-    padding: 10px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav a {
@@ -67,6 +70,11 @@ footer {
     margin-top: 1em;
     border-top: 1px solid #000;
     text-align: center;
+}
+
+header, footer {
+    max-width: 840px;
+    margin: 0 auto;
 }
 
 /* Class Selectors */
