--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,8 +80,18 @@ header, footer {
     margin: 0 auto;
 }
 
-div header, .grid, footer {
+header, .grid, footer {
+    .grid {
+        display: grid;
+        align-items: center;
+    }
 
+    main {
+        grid-column: 2/3;
+        margin: 1rem;
+    }
+
+    
 }
 
 /* Class Selectors */
