--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,18 +80,21 @@ header, footer {
     margin: 0 auto;
 }
 
-header, .grid, footer {
-    .grid {
-        display: grid;
-        align-items: center;
-    }
+.grid {
+    display: grid;
+    align-items: center;
+}
 
-    main {
-        grid-column: 2/3;
-        margin: 1rem;
-    }
+main {
+    grid-column: 2/3;
+    margin: 1rem;
+}
 
-    
+aside {
+    width: 20rem;
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 /* Class Selectors */
