--- a/styles/styles.css
+++ b/styles/styles.css
@@ -96,6 +96,11 @@ aside {
     grid-row: 1/2;
 }
 
+body {
+    font-size: 16px;
+    font-family: Roboto, sans-serif;
+}
+
 /* Class Selectors */
 .box {
     margin: 1rem;
