--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,15 @@
     box-sizing: border-box;
 }
 
+body {
+    font-size: 16px;
+    font-family: Roboto, sans-serif;
+}
+
+body {
+    display: block;
+}
+
 nav {
     background-color: steelblue;
     padding: 1rem;
@@ -94,11 +103,6 @@ aside {
     position: relative;
     grid-column: 1/2;
     grid-row: 1/2;
-}
-
-body {
-    font-size: 16px;
-    font-family: Roboto, sans-serif;
 }
 
 /* Class Selectors */
