--- a/styles/styles.css
+++ b/styles/styles.css
@@ -83,9 +83,13 @@ footer {
     text-align: center;
 }
 
-header, footer {
+header, .grid, footer {
     max-width: 840px;
     margin: 0 auto;
+}
+
+header {
+    display: block;
 }
 
 .grid {
