--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,15 +1,11 @@
 * {
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
 header {
     display: block;
-}
-
-body {
-    font-size: 16px;
-    font-family: Roboto, sans-serif;
 }
 
 body {
@@ -87,8 +83,8 @@ h2 {
 
 aside h2 {
     position: absolute;
-    top: 85px;
-    left: 125px;
+    top: 3px;
+    left: 96px;
 }
 
 footer {
