--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,11 @@ header {
 }
 
 body {
+    font-size: 16px;
+    font-family: Roboto, sans-serif;
+}
+
+body {
     display: block;
 }
 
@@ -93,14 +98,14 @@ footer {
     text-align: center;
 }
 
-header, .grid, footer {
-    max-width: 840px;
-    margin: 0 auto;
-}
-
 .grid {
     display: grid;
     align-items: center;
+}
+
+header, .grid, footer {
+    max-width: 840px;
+    margin: 0 auto;
 }
 
 main {
