--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,6 +101,7 @@ footer {
 .grid {
     display: grid;
     align-items: center;
+    grid-template-columns: 1fr 1fr;
 }
 
 header, .grid, footer {
@@ -116,8 +117,6 @@ main {
 aside {
     width: 20rem;
     position: relative;
-    grid-column: 1;
-    grid-row: 1;
 }
 
 /* Class Selectors */
