--- a/styles/styles.css
+++ b/styles/styles.css
@@ -69,6 +69,8 @@ aside {
     background-color: #eee;
     color: #333;
     text-align: center;
+    grid-column: 1;
+    grid-row: 1;
 }
 
 aside img {
