--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -53,14 +53,23 @@ header, main, footer {
 
 /* CSS for header */
 header {
+    margin: 1rem auto;
     display: grid;
-    grid-template-columns: 150px auto;
+    grid-template-columns: 120px 1fr 2fr;
     align-items: center;
-    background-color: var(--primary-color);
+    border-bottom: 1px solid #ccc;
+    max-width: 1000px;
 }
 
-.logo {
-    width: 100px;
+.logo img {
+    margin: 0 0.25rem 0 1rem;
+    width: 64px;
+    height: auto;
+}
+
+h1 {
+    font-size: 2rem;
+    font-family: var(--heading-font);
 }
 
 nav {
