--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -33,6 +33,11 @@ h6 {
     color: var(--secondary-color);
 }
 
+p {
+    font-family: var(--heading-font);
+    color: #000;
+}
+
 img {
     width: 100%;
 }
@@ -53,9 +58,8 @@ header, main, footer {
 
 /* CSS for header */
 header {
-    margin: 1rem auto;
     display: grid;
-    grid-template-columns: 120px 1fr 2fr;
+    grid-template-columns: 150px auto;
     align-items: center;
     border-bottom: 1px solid #ccc;
     max-width: 1000px;
