--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 [data-tts-block-id].tts-active {
     background : rgb(206, 225, 255, 0.9) !important ;
     }
