--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -190,10 +190,22 @@ padding : 0 20px;
 }
 
 .adventures {
-grid-column : 1 / 13;
+margin: 50px 0;
+display: grid;
+grid-template-columns: repeat(5, 1fr);
 gap : 1em;
-margin : 50px 0;
 justify-items : center;
+}
+
+.adventures h2 {
+grid-column: 1/-1;
+justify-self: center;
+padding: 1em 0;
+}
+
+figure {
+display: flex;
+flex-direction: column;
 }
 
 .history h2, adventures h2 {
