--- a/week05/styles/poll-form.css
+++ b/week05/styles/poll-form.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poetsen+One&display=swap');
 
+[data-tts-block-id].tts-active {
+    background : rgb(206, 225, 255, 0.9) !important ;
+}
+[data-tts-sentence-id].tts-active {
+    background : rgb(0, 89, 191, 0.7) !important ;
+}
+
 * {
     margin : 0;
     padding : 0;
