--- a/week05/styles/poll-form.css
+++ b/week05/styles/poll-form.css
@@ -15,38 +15,42 @@ body {
     font-family : 'Montserrat', sans-serif;
     font-size : 16px;
     color : #333;
-    background : #f2f2f2;
+    background : #fff;
 }
 
 header {
-    background-color: #333;
-    padding: 1rem 0;
-    text-align: center;
+    margin: 0 auto;
+    width: 650px;
 }
 
 h1 {
-    margin : 0;
-    font-size : 2%;
-    color : #fff;
+    margin : 1rem;
+    font-size : 1.5em;
+    color : navy;
+    text-align: center;
 }
 
 form {
     margin : 0 auto;
-    max-width: 650px;
+    width: 650px;
     background-color: #fff;
     border-radius: 0.5rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 2rem;
+    padding: 1rem;
 }
 
 fieldset {
-    border: none;
-    margin-bottom: 2rem;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    margin-bottom: 1rem;
+    padding: 1rem;
+    display: grid;
+    grid-gap: .5rem;
 }
 
 legend {
-color: navy;
-font-size: 1.5rem;
+    padding: 0.5rem;
+    color: navy;
+    font-size: 1.3rem;
 }
 
 label {
@@ -54,36 +58,36 @@ label {
     font-family: 'Poetsen One', sans-serif;
     font-size: 1.2rem;
     margin-bottom: 0.5rem;
+    text-align: right;
+    padding-right: 1rem;
 }
 
 input,
 select, 
 textarea {
     width: 100%;
-    padding: 0.75rem;
-    font-size: 1rem;
+    padding: 0.5rem;
+    font-size: 1.1rem;
     border: 1px solid #ccc;
     border-radius: 0.25rem;
     margin-bottom: 1rem;
 }
 
 input[type="checkbox"] {
-    width : auto;
-    height : auto;
-    vertical-align : middle;
+    width : 22px;
+    height : 22px;
+    vertical-align : bottom;
     margin-right: 0.5rem;
 }
 
 button {
-    display: block;
-    margin : 1rem auto;
+    margin : 1rem;
     background-color : navy;
     color : #fff;
     border : none;
-    border-radius : 0.25rem;
-    padding : 0.75rem 1.5rem;
+    border-radius : 0.5rem;
+    padding : 0.75rem;
     font-size : 1.2rem;
-    cursor: pointer;
 }
 
 button:hover {
@@ -91,9 +95,21 @@ button:hover {
 }
 
 footer {
-    background-color: #333;
-    color: #fff;
+    margin: 1rem auto 0;
+    width: 650px;
+    color: #777;
     text-align: center;
     padding: 1rem 0;
+    border-top: 1px solid #ccc;
+    font-size: 0.8em;
 }
 
+.column1,
+.column2 {
+    flex: 1;
+}
+
+.column1 label {
+    text-align: right;
+    margin-right: 3rem;
+}
