--- a/week05/styles/poll-form.css
+++ b/week05/styles/poll-form.css
@@ -31,54 +31,53 @@ h1 {
 }
 
 form {
-    margin : 0 auto;
     width: 650px;
-    background-color: #fff;
-    border-radius: 0.5rem;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin: 0 auto;
     padding: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 0.5rem;
+    background-color: #eee;
+    display: grid;
 }
 
 fieldset {
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    margin-bottom: 1rem;
-    padding: 1rem;
     display: grid;
-    grid-gap: .5rem;
+    gap: 0.5rem;
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding: 1rem;
 }
 
 legend {
     padding: 0.5rem;
     color: navy;
-    font-size: 1.3rem;
+    font-size: 1.3em;
+}
+
+label,
+input,
+button,
+select, 
+textarea {
+    font-family: 'Poetsen One', sans-serif;
 }
 
 label {
-    display: block;
-    font-family: 'Poetsen One', sans-serif;
-    font-size: 1.2rem;
-    margin-bottom: 0.5rem;
     text-align: right;
     padding-right: 1rem;
 }
 
 input,
-select, 
+select,
 textarea {
-    width: 100%;
     padding: 0.5rem;
     font-size: 1.1rem;
-    border: 1px solid #ccc;
-    border-radius: 0.25rem;
-    margin-bottom: 1rem;
 }
 
 input[type="checkbox"] {
     width : 22px;
     height : 22px;
-    vertical-align: auto;
-    margin-left: 35rem;
-    text-align: end;
+    vertical-align: bottom;
 }
 
 button {
@@ -86,8 +85,8 @@ button {
     background-color : navy;
     color : #fff;
     border : none;
-    border-radius : 1.5rem;
-    padding : 1rem;
+    border-radius : 0.5rem;
+    padding : 0.75rem;
     font-size : 1.2rem;
 }
 
@@ -98,19 +97,22 @@ button:hover {
 footer {
     margin: 1rem auto 0;
     width: 650px;
-    color: #777;
     text-align: center;
-    padding: 1rem 0;
-    border-top: 1px solid #ccc;
     font-size: 0.8em;
+    color: #777;
+    border-top: 1px solid #ccc;
 }
 
-.column1,
+.form-item {
+    display: grid;
+    align-items: center;
+}
+
+.column1 {
+    grid-template-columns: 3fr 1fr;
+    margin: 0.5rem 0;
+}
+
 .column2 {
-    flex: 1;
-}
-
-.column1 label {
-    text-align: right;
-    margin-right: 3rem;
+    grid-template-columns: 1fr 2fr;
 }
